# Turtlebot3_ppo_demo-1

./: find_B.py  practice.py  pseudo_data.npz  pseudo_data_with_noise.npz  qualysis_publisher.py  requirements.txt
src/turtlebot3_ppo/: package.xml  setup.py
src/turtlebot3_ppo/model/: c3m.p  ppo.p
src/turtlebot3_ppo/turtlebot3_ppo/: data_collector.py  robot_controller.py
turtlebot_data/: circle_toward_down.npz  circle_toward_left.npz  circle_toward_right.npz  circle_toward_up.npz  curvy_from_bottom_left_corner.npz  curvy_from_bottom_right_corner.npz  curvy_from_upper_left_corner.npz  curvy_from_upper_right_corner.npz  curvy_toward_down.npz  curvy_toward_left.npz  curvy_toward_right.npz  curvy_toward_up.npz  zigzag_toward_down.npz  zigzag_toward_left.npz  zigzag_toward_right.npz  zigzag_toward_up.npz
turtlebot_data/ref/: ref(curvy_diag).npz  ref(curvy_left).npz  ref(curvy_up).npz  ref(figure_eight_diag).npz  ref(figure_eight_left).npz  ref(figure_eight_up).npz  ref(spiral_in).npz  ref(spiral_out).npz  ref(zigzag).npz
